--- a/package.json
+++ b/package.json
@@ -25,18 +25,17 @@
         "label",
         "i-form"
     ],
-    "main": "index.js",
+    "main": "i-label.js",
     "browserify": {
         "transform": ["cssify"]
+    },
+    "directories": {
+        "css": "./css"
     },
     "engines": {
         "node": "*"
     },
     "dependencies": {
-        "polyfill": "itsa/polyfill",
-        "event-dom": "itsa/event-dom",
-        "js-ext": "itsa/js-ext",
-        "css": "itsa/css",
         "itags.core": "itags/core"
     },
     "devDependencies": {
